tests/errors/cpp6.f90
program cpp6
implicit none
#include "cpp6.h"
print *, "OK"
end program
